<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >





    <EditText
        android:id="@+id/txt_direccion"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam_alto_caja_texto"
        android:layout_below="@id/txt_nombre"
        android:textColor="@color/blanco"
        android:hint="@string/txt_direccion"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/gris"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:textSize="@dimen/size_text_caja_texto"
        android:background="@drawable/bordes_redondeados_pequenos"
        android:gravity="center"
        android:ellipsize="end"
        android:inputType="textPostalAddress"
        />

    <EditText
        android:id="@+id/txt_barrio"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tam_alto_caja_texto"
        android:layout_below="@id/txt_direccion"
        android:textColor="@color/blanco"
        android:hint="@string/txt_barrio"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/gris"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:textSize="@dimen/size_text_caja_texto"
        android:background="@drawable/bordes_redondeados_pequenos"
        android:gravity="center"
        android:ellipsize="end"
        android:inputType="textPersonName"
        />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_barrio"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small">

        <Button
            android:id="@+id/btn_cancelar"
            android:text="@string/txt_cancelar"
            android:textSize="@dimen/size_text_btn_dialog_vaciar"
            android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
            android:textColor="@color/blanco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/super_margin_small"
            android:layout_marginTop="@dimen/super_margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"/>

        <Button
            android:id="@+id/btn_aceptar"
            android:text="@string/txt_aceptar"
            android:textSize="@dimen/size_text_btn_dialog_vaciar"
            android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
            android:textColor="@color/blanco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/super_margin_small"
            android:layout_marginTop="@dimen/super_margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            />


    </LinearLayout>
</RelativeLayout>