<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:id="@+id/contenedor_mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/img_gorrita"
            android:layout_width="@dimen/tam_imagen_gorra"
            android:layout_height="@dimen/tam_imagen_gorra"
            android:src="@mipmap/ic_gorrita"/>

        <TextView
            android:id="@+id/txtmensaje"
            android:layout_toRightOf="@id/img_gorrita"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tam_text_mensaje_dialog_vaciar"
            android:text="@string/menaje_desea_vaciar_pedido"
            android:textColor="@color/verdeapp"
            android:textSize="@dimen/size_tu_opinion"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contenedor_mensaje"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/btn_cancelar"
            android:text="@string/txt_cancelar"
            android:background="@drawable/btn_realizar_pedido"
            android:textColor="@color/amarilloapp"
            android:textSize="@dimen/size_letra_boton_realizar_pedido"
            android:layout_width="0dp"
            android:layout_height="@dimen/tam_btn_enviar"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/super_margin_small"
            android:layout_marginTop="@dimen/super_margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="center"/>

        <TextView
            android:id="@+id/btn_aceptar"
            android:text="@string/txt_aceptar"
            android:background="@drawable/btn_realizar_pedido"
            android:textColor="@color/amarilloapp"
            android:textSize="@dimen/size_letra_boton_realizar_pedido"
            android:layout_width="0dp"
            android:layout_height="@dimen/tam_btn_enviar"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/super_margin_small"
            android:layout_marginTop="@dimen/super_margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="center"
            />


    </LinearLayout>
</RelativeLayout>