<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pirinola24.com.pirinola24.ContactoActivity"
    android:background="@color/negro">


    <ImageView
        android:id="@+id/flecha_atras"
        android:layout_width="@dimen/tam_ancho_flecha_atras"
        android:layout_height="@dimen/tam_flecha_atras"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_atras"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/flecha_atras"
        android:layout_marginBottom="@dimen/margin_small"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/imagen_login"
                android:layout_width="@dimen/tam_ancho_imagen_login"
                android:layout_height="@dimen/tam_alto_imagen_login"
                android:layout_marginTop="@dimen/margin_top_imagen_login"
                android:layout_marginBottom="@dimen/margin_imagen_login"
                android:src="@drawable/gorrita_grande"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"

                />

            <TextView
                android:id="@+id/txtOpinion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:layout_below="@id/imagen_login"
                android:textColor="@color/blanco"
                android:textSize="@dimen/size_text_caja_texto"
                android:text="@string/txt_tu_opinion_importante"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"/>

            <EditText
                android:id="@+id/txt_email"
                android:maxLength="100"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:layout_below="@id/txtOpinion"
                android:textColor="@color/blanco"
                android:hint="@string/txt_hint_correo_electronico"
                android:layout_marginTop="@dimen/margin_input_registrase"
                android:textColorHint="@color/gris"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:textSize="@dimen/size_text_caja_texto"
                android:background="@drawable/bordes_redondeados_pequenos"
                android:gravity="center"
                android:ellipsize="end"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/txt_nombre"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_caja_texto"
                android:layout_below="@id/txt_email"
                android:hint="@string/txt_nombre"
                android:textColorHint="@color/gris"
                android:textColor="@color/blanco"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:textSize="@dimen/size_text_caja_texto"
                android:background="@drawable/bordes_redondeados_pequenos"
                android:gravity="center"
                android:ellipsize="end"
                android:inputType="textPersonName"
                />








            <ScrollView
                android:id="@+id/scrollView_observaciones"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_scrollview_observaciones"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_below="@id/txt_nombre"
                android:scrollbars="none"
                android:background="@drawable/bordes_redondeados_pequenos"
                >

                <EditText
                    android:id="@+id/txt_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_muy_poca"
                    android:maxLength="300"
                    android:minHeight="@dimen/tam_scrollview_observaciones"
                    android:inputType="textMultiLine"
                    android:hint="@string/txt_mensaje_contacto"
                    android:textSize="@dimen/size_text_caja_texto"
                    android:textColor="@color/blanco"
                    android:textColorHint="@color/gris"
                    android:gravity="center"
                    android:ellipsize="end"/>

            </ScrollView>


            <Button
                android:id="@+id/btn_enviar_pedido"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tam_alto_btn"
                android:text="@string/txt_enviar"
                android:textSize="@dimen/size_text_btn_continuar_no_registrado"
                android:textColor="@color/blanco"
                android:layout_below="@id/scrollView_observaciones"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="@drawable/bordes_redondos_pequno_fondo_rojo"
                />


        </RelativeLayout>


    </ScrollView>



</RelativeLayout>
